Erro de 40px no contornado (FINALMENTE)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/morkitus/bancoimg/main/Logos/favicon.ico">
         <link rel="stylesheet" type="text/css" href="./source/css/style.css" />
 
-        <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+        <script type="text/javascript" src="./source/js/zerar-top.js"></script>
         <script type="text/javascript" src="./source/js/scripts.js"></script>
+        <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+       
+
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,300" rel="stylesheet" type="text/css" />
@@ -17,7 +21,7 @@
 
     </head>
 
-    <body>
+    <body id="BD">
 
         <nav class="nav">
             <ul class="nav__menu">
@@ -113,9 +117,7 @@
             Todos os direitos reservados © Wild HTML™ 2021 ®
         </footer>
 
-        <script type="text/javascript"
-            src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
+       
     </body>
 
 </html>
