Update arquivos locais

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             </div>
         </div>
 
+        <div class="linha"></div>
+
         <div class="caixa2">
             <div class="conteudo-titulo">
                 <span class="titulo">Pegando a estrada</span>
@@ -52,10 +54,12 @@
         </div>
 
         <div class="conteudo">
+            <hr>
             <h3>Quem Somos</h3>
             <p>Somos uma comunidade gamer que no meio de tantos altos e baixos nos estilos dos games, não largamos a paixão por automobilismo. Uma comunidade apaixonada e dedicada no que faz. Um comunidade que se divide entre o pessoal forfun que só arcade, jogos de corridas pra rir e trollar, ops. Uma rapaziada que leva a sério, se dedica horas e horas em simuladores buscando uma simulação perfeita, um tempo incrível e muita rivalidade na pista. Mas no fim, são todos Riot CLub, que acabam entrando em qualquer game que tenha uma lata velha, com motor e quatro rodas para dar boas risadas.</p>
 
             <p>Se sentiu em casa?! Acompanhe a lista de jogos e fotos que tiramos nos tempos livres. Entre em nosso Discord, nos acompanhe nas Redes Socias e venha sem um Riot também.</p>
+            <hr>
         </div>
 
         <div class="caixa3">
@@ -77,11 +81,15 @@
             </div>
         </div>
 
+        <div class="linha"></div>
+
         <div class="caixa5">
             <div class="conteudo-titulo">
                 <span class="titulo">Montanhas</span>
             </div>
         </div>
+
+        <div class="linha"></div>
 
         <div class="caixa6">
             <div class="conteudo-titulo">
@@ -89,11 +97,15 @@
             </div>
         </div>
 
+        <div class="linha"></div>
+
         <div class="caixa7">
             <div class="conteudo-titulo">
                 <span class="titulo">Montanhas</span>
             </div>
         </div>
+
+        <div class="linha"></div>
 
         <div class="caixa8">
             <div class="conteudo-titulo">
@@ -101,11 +113,15 @@
             </div>
         </div>
 
+        <div class="linha"></div>
+
         <div class="caixa9">
             <div class="conteudo-titulo">
                 <span class="titulo">Montanhas</span>
             </div>
         </div>
+
+        <div class="linha"></div>
 
         <div class="caixa10">
             <div class="conteudo-titulo">
@@ -114,7 +130,12 @@
         </div>
 
         <footer>
-            Todos os direitos reservados © Wild HTML™ 2021 ®
+            <div>
+                <hr>
+                    Todos os direitos reservados © Wild HTML™ 2021 ®
+                <hr>
+            </div>
+            
         </footer>
 
        
