--- a/index.html
+++ b/index.html
@@ -23,172 +23,36 @@
 
     <body id="BD">
 
-        <nav class="nav">
-            <ul class="nav__menu">
-                <li class="nav__menu-item"><a>Início</a></li>
-                <li class="nav__menu-item"><a>Quem Somos</a></li>
-                <li class="nav__menu-item"><a>Streamers</a></li>
-                <li class="nav__menu-item"><a>Parceiros</a></li>
-                <li class="nav__menu-item"><a>Galeria</a></li>
-                <li class="nav__menu-item"><a>Fale Conosco</a></li>
-                <li class="nav__menu-item"><a href="javascript:trocarIdioma('pt')"><img alt="portugues" src="https://github.com/morkitus/bancoimg/blob/main/Logos/portuguese.png?raw=true" width="16x"></a></li>
-                <li class="nav__menu-item"><a href="javascript:trocarIdioma('es')"><img alt="espanhol" src="https://github.com/morkitus/bancoimg/blob/main/Logos/espana.png?raw=true" width="16px"></a></li>
-                <li class="nav__menu-item"><a href="javascript:trocarIdioma('en')"><img alt="ingles" src="https://github.com/morkitus/bancoimg/blob/main/Logos/usa.png?raw=true" width="16px"></a></li>
+        <nav id="home">
+            <ul id="navegacao">
+                <li class="home primeiro"><a class="horz" href="./index.html">Home</a></li>
+                <li class="quem-somos"><a class="horz" href="./pages/Quem-Somos.html">Quem Somos</a></li>
+                <li class="streamers"><a class="horz" href="#">Streamers</a></li>
+                <li class="parceiros"><a class="horz" href="#">Parceiros</a></li>
+                <li class="galeria"><a class="horz" href="#">Galeria</a></li>
+                <li class="fale-conosco"><a class="horz" href="#">Fale Conosco</a></li>
             </ul>
         </nav>
 
-        <div id="google_translate_element" class="boxTradutor"></div>
-
-        <div class="caixa1">
-            <div class="conteudo-titulo">
-                <div class="back"></div>
-
-            </div>
+        <div id="vertical">
+            <ul class="vertical">
+                <li class="vert"><a class="ver">portuguese</a></li>
+                <li class="vert"><a class="ver">english</a></li>
+                <li class="vert"><a class="ver"></a>spanish</a></li>
+            </ul>
         </div>
 
-        <div class="linha"></div>
-
-        <div class="caixa2 slider">
-            <div class="slides">
-                <!--Radio Buttons-->
-                <input type="radio" name="radio-btn" id="radio1">
-                <input type="radio" name="radio-btn" id="radio2">
-                <input type="radio" name="radio-btn" id="radio3">
-                <!--End Radio Buttons-->
-
-                <!--Slide Images-->
-                <div class="slide first">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/AssettoCorsa/001.jpg?raw=true" alt="Imagem 1" />
-                </div>
-                <div class="slide">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/AssettoCorsaCompetizone/001.jpg?raw=true" alt="Imagem 2" />
-                </div>
-                <div class="slide">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/DirtRally2.0/001.jpg?raw=true" alt="Imagem 3" />
-                </div>
-                <!--End Slide Images--> 
-            </div>
-
-            <div class="conteudo-titulo">
-                <span class="titulo">Quem Somos</span>
-            </div>
-        </div>
-
-        <div class="conteudo">
-            <hr>
-            <p>Somos uma comunidade gamer que no meio de tantos altos e baixos nos estilos dos games, não largamos a paixão por automobilismo. Uma comunidade apaixonada e dedicada no que faz. Um comunidade que se divide entre o pessoal forfun que só arcade, jogos de corridas pra rir e trollar, ops. Uma rapaziada que leva a sério, se dedica horas e horas em simuladores buscando uma simulação perfeita, um tempo incrível e muita rivalidade na pista. Mas no fim, são todos Riot Club, que acabam entrando em qualquer game que tenha uma lata velha, com motor e quatro rodas para dar boas risadas.</p>
-
-            <p>Se sentiu em casa?! Acompanhe a lista de jogos e fotos que tiramos nos tempos livres. Entre em nosso Discord, nos acompanhe nas Redes Socias e venha sem um Riot também.</p>
-            <hr>
-        </div>
-
-        <div class="caixa3 slider">
-            <div class="slides">
-                <!--Radio Buttons-->
-                <input type="radio" name="radio-btn" id="radio4">
-                <input type="radio" name="radio-btn" id="radio5">
-                <input type="radio" name="radio-btn" id="radio6">
-                <!--End Radio Buttons-->
-
-                <!--Slide Images-->
-                <div class="slide first">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/EuroTruckSimulator/001.jpg?raw=true" alt="Imagem 4" />
-                </div>
-                <div class="slide">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/F122/001.jpg?raw=true" alt="Imagem 5" />
-                </div>
-                <div class="slide">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/ForzaHorizon/001.jpg?raw=true" alt="Imagem 6" />
-                </div>
-                <!--End Slide Images--> 
-            </div>
-
-            <!-- <div class="conteudo-titulo">
-                <span class="titulo">Pôr do sol</span>
-            </div> -->
-        </div>
-
-        <div class="conteudo">
-            <hr>
-            <p>Se o cheiro de gasolina lhe parece sedutor, se o ronco do motor lhe faz arrepiar e se há altas doses de adrenalina correndo em suas veias a mais de 100 batimentos por minuto, pois é meu caro, nós temos muito em comum e há uma comunidade onde a paixão por carros é a regra mais importante, seja casual, ou no mais alto nível do simracing, todos são bem-vindos aqui na RiotClub.</p>
-
-            <p>Independente do jogo e do estilo, se tem um carro, nós estaremos lá, mas deixamos claro que a zueira sempre terá o seu espaço, o companheirismo será nosso norte e o respeito o nosso guia por essa longa estrada dos games, nosso objetivo maior é simplesmente nos divertir na companhia dos nossos amigos, vagando de jogo em jogo, testando nosso rivais, trollando o amiguinho distraído e rindo da noobice alheia, pode vir você também e venha fazer parte da nossa família, e para não perder as novidades nos siga nas nossas redes sociais.</p>
-            <hr>
-        </div>
-
-        <div class="caixa4 slider">
-            <div class="slides">
-                <!--Radio Buttons-->
-                <input type="radio" name="radio-btn" id="radio7">
-                <input type="radio" name="radio-btn" id="radio8">
-                <input type="radio" name="radio-btn" id="radio9">
-                <!--End Radio Buttons-->
-
-                <!--Slide Images-->
-                <div class="slide first">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/GTAMods/001.jpg?raw=true" alt="Imagem 7" />
-                </div>
-                <div class="slide">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/NeedForSpeedHeat/001.jpeg?raw=true" alt="Imagem 8" />
-                </div>
-                <div class="slide">
-                    <img src="https://github.com/morkitus/bancoimg/blob/main/TheCrew2/001.jpg?raw=true" alt="Imagem 9" />
-                </div>
-                <!--End Slide Images--> 
-            </div>
-
-            <!-- <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div> -->
-        </div>
-
-        <!-- <div class="linha"></div>
-
-        <div class="caixa5">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa6">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa7">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa8">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa9">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa10">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
+        <!-- <div class="vertical-menu">
+            <a href="javascript:trocarIdioma('pt')"><img alt="portugues" src="https://github.com/morkitus/bancoimg/blob/main/Logos/portuguese.png?raw=true" width="32px"></a>
+            <a href="javascript:trocarIdioma('es')"><img alt="espanhol" src="https://github.com/morkitus/bancoimg/blob/main/Logos/espana.png?raw=true" width="32px"></a>
+            <a href="javascript:trocarIdioma('en')"><img alt="ingles" src="https://github.com/morkitus/bancoimg/blob/main/Logos/usa.png?raw=true" width="32px">
         </div> -->
+
+        <div class="caixa1"></div>
+
+        C
+
+        <div id="google_translate_element" class="boxTradutor"></div>
 
         <footer>
             <div>
