Menus atualizados (Ler README.md)

--- a/pages/Quem-Somos.html
+++ b/pages/Quem-Somos.html
@@ -8,12 +8,12 @@
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/morkitus/bancoimg/main/Logos/favicon.ico">
         <link rel="stylesheet" type="text/css" href="../source/css/style.css" />
 
-        <script type="text/javascript" src="./source/js/zerar-top.js"></script>
-        <script type="text/javascript" src="./source/js/scripts.js"></script>
+        <script type="text/javascript" src="../source/js/zerar-top.js"></script>
+        <script type="text/javascript" src="../source/js/scripts.js"></script>
         <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
        
-
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,300" rel="stylesheet" type="text/css" />
@@ -34,19 +34,26 @@
             </ul>
         </nav>
 
-        <!-- <nav class="nav">
-            <ul class="nav__menu">
-                <li class="nav__menu-item"><a href="../">Início</a></li>
-                <li class="nav__menu-item"><a>Quem Somos</a></li>
-                <li class="nav__menu-item"><a>Streamers</a></li>
-                <li class="nav__menu-item"><a>Parceiros</a></li>
-                <li class="nav__menu-item"><a>Galeria</a></li>
-                <li class="nav__menu-item"><a>Fale Conosco</a></li>
-                <li class="nav__menu-item"><a href="javascript:trocarIdioma('pt')"><img alt="portugues" src="https://github.com/morkitus/bancoimg/blob/main/Logos/portuguese.png?raw=true" width="16x"></a></li>
-                <li class="nav__menu-item"><a href="javascript:trocarIdioma('es')"><img alt="espanhol" src="https://github.com/morkitus/bancoimg/blob/main/Logos/espana.png?raw=true" width="16px"></a></li>
-                <li class="nav__menu-item"><a href="javascript:trocarIdioma('en')"><img alt="ingles" src="https://github.com/morkitus/bancoimg/blob/main/Logos/usa.png?raw=true" width="16px"></a></li>
-            </ul>
-        </nav> -->
+		<div class="container">
+			<div class="menu-toggle">
+				<span class="fa fa-plus"></span>
+			</div>
+
+			<div class="menu-round">
+				<div class="btn-app">
+					<a class="fa" href="javascript:trocarIdioma('en')"><img alt="ingles" src="https://github.com/morkitus/bancoimg/blob/main/Logos/usa.png?raw=true" width="40px">
+				</div>
+				<div class="btn-app">
+					<a class="fa" href="javascript:trocarIdioma('es')"><img src="https://github.com/morkitus/bancoimg/blob/main/Logos/espana.png?raw=true" width="40px"></a>
+				</div>
+				<div class="btn-app">
+					<a class="fa" href="javascript:trocarIdioma('pt')"><img src="https://github.com/morkitus/bancoimg/blob/main/Logos/portuguese.png?raw=true" width="40px"></a>
+				</div>
+			</div>
+
+		</div>
+
+		<script src="../source/js/script-menu-vertical.js"></script>
 
         <div id="google_translate_element" class="boxTradutor"></div>
 
@@ -55,7 +62,9 @@
         <div class="linha"></div>
 
         <div class="caixa2 slider">
+
             <div class="slides">
+
                 <!--Radio Buttons-->
                 <input type="radio" name="radio-btn" id="radio1">
                 <input type="radio" name="radio-btn" id="radio2">
@@ -73,23 +82,29 @@
                     <img src="https://github.com/morkitus/bancoimg/blob/main/DirtRally2.0/001.jpg?raw=true" alt="Imagem 3" />
                 </div>
                 <!--End Slide Images--> 
+
             </div>
 
             <div class="conteudo-titulo">
                 <span class="titulo">Quem Somos</span>
             </div>
+
         </div>
 
         <div class="conteudo">
+
             <hr>
             <p>Somos uma comunidade gamer que no meio de tantos altos e baixos nos estilos dos games, não largamos a paixão por automobilismo. Uma comunidade apaixonada e dedicada no que faz. Um comunidade que se divide entre o pessoal forfun que só arcade, jogos de corridas pra rir e trollar, ops. Uma rapaziada que leva a sério, se dedica horas e horas em simuladores buscando uma simulação perfeita, um tempo incrível e muita rivalidade na pista. Mas no fim, são todos Riot Club, que acabam entrando em qualquer game que tenha uma lata velha, com motor e quatro rodas para dar boas risadas.</p>
 
             <p>Se sentiu em casa?! Acompanhe a lista de jogos e fotos que tiramos nos tempos livres. Entre em nosso Discord, nos acompanhe nas Redes Socias e venha sem um Riot também.</p>
             <hr>
+
         </div>
 
         <div class="caixa3 slider">
+
             <div class="slides">
+
                 <!--Radio Buttons-->
                 <input type="radio" name="radio-btn" id="radio4">
                 <input type="radio" name="radio-btn" id="radio5">
@@ -106,12 +121,10 @@
                 <div class="slide">
                     <img src="https://github.com/morkitus/bancoimg/blob/main/ForzaHorizon/001.jpg?raw=true" alt="Imagem 6" />
                 </div>
-                <!--End Slide Images--> 
+                <!--End Slide Images-->
+                
             </div>
 
-            <!-- <div class="conteudo-titulo">
-                <span class="titulo">Pôr do sol</span>
-            </div> -->
         </div>
 
         <div class="conteudo">
@@ -123,7 +136,9 @@
         </div>
 
         <div class="caixa4 slider">
+
             <div class="slides">
+
                 <!--Radio Buttons-->
                 <input type="radio" name="radio-btn" id="radio7">
                 <input type="radio" name="radio-btn" id="radio8">
@@ -141,60 +156,10 @@
                     <img src="https://github.com/morkitus/bancoimg/blob/main/TheCrew2/001.jpg?raw=true" alt="Imagem 9" />
                 </div>
                 <!--End Slide Images--> 
+
             </div>
 
-            <!-- <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div> -->
         </div>
-
-        <!-- <div class="linha"></div>
-
-        <div class="caixa5">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa6">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa7">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa8">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa9">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div>
-
-        <div class="linha"></div>
-
-        <div class="caixa10">
-            <div class="conteudo-titulo">
-                <span class="titulo">Montanhas</span>
-            </div>
-        </div> -->
 
         <footer>
             <div>
