--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
        
-        
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,300" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
 
         <nav id="home">
             <ul id="navegacao">
-                <li class="home primeiro"><a class="horz" href="./index.html">Home</a></li>
+                <li class="home primeiro"><a class="horz" href="./index.html">Início</a></li>
                 <li class="quem-somos"><a class="horz" href="./pages/Quem-Somos.html">Quem Somos</a></li>
                 <li class="streamers"><a class="horz" href="#">Streamers</a></li>
                 <li class="parceiros"><a class="horz" href="#">Parceiros</a></li>
@@ -34,7 +34,6 @@
             </ul>
         </nav>
 
-        <!-- partial:index.partial.html -->
 		<div class="container">
 			<div class="menu-toggle">
 				<span class="fa fa-plus"></span>
@@ -42,25 +41,19 @@
 
 			<div class="menu-round">
 				<div class="btn-app">
-					<div class="fa fa-twitter"></div>
+					<a class="fa" href="javascript:trocarIdioma('en')"><img alt="ingles" src="https://github.com/morkitus/bancoimg/blob/main/Logos/usa.png?raw=true" width="40px">
 				</div>
 				<div class="btn-app">
-					<div class="fa fa-facebook"></div>
+					<a class="fa" href="javascript:trocarIdioma('es')"><img src="https://github.com/morkitus/bancoimg/blob/main/Logos/espana.png?raw=true" width="40px"></a>
 				</div>
 				<div class="btn-app">
-					<div class="fa fa- fa-wikipedia-w"></div>
+					<a class="fa" href="javascript:trocarIdioma('pt')"><img src="https://github.com/morkitus/bancoimg/blob/main/Logos/portuguese.png?raw=true" width="40px"></a>
 				</div>
 			</div>
 
 		</div>
-		<!-- partial -->
-		<script src="./source/js/script-menu-vertical.js"></script>
 
-        <!-- <div class="vertical-menu">
-            <a href="javascript:trocarIdioma('pt')"><img alt="portugues" src="https://github.com/morkitus/bancoimg/blob/main/Logos/portuguese.png?raw=true" width="32px"></a>
-            <a href="javascript:trocarIdioma('es')"><img alt="espanhol" src="https://github.com/morkitus/bancoimg/blob/main/Logos/espana.png?raw=true" width="32px"></a>
-            <a href="javascript:trocarIdioma('en')"><img alt="ingles" src="https://github.com/morkitus/bancoimg/blob/main/Logos/usa.png?raw=true" width="32px">
-        </div> -->
+		<script src="./source/js/script-menu-vertical.js"></script>
 
         <div class="caixa1"></div>
 
