Formulário pronto - Ler README.md

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <nav id="home">
             <ul id="navegacao">
                 <li class="home primeiro"><a class="horz" href="./index.html">Início</a></li>
-                <li class="quem-somos"><a class="horz" href="./pages/Quem-Somos.html">Quem Somos</a></li>
+                <li class="quem-somos"><a class="horz" href="./pages/quem-somos.html">Quem Somos</a></li>
                 <li class="streamers"><a class="horz" href="#">Streamers</a></li>
                 <li class="parceiros"><a class="horz" href="#">Parceiros</a></li>
                 <li class="galeria"><a class="horz" href="#">Galeria</a></li>
-                <li class="fale-conosco"><a class="horz" href="#">Fale Conosco</a></li>
+                <li class="fale-conosco"><a class="horz" href="./pages/fale-conosco.html">Fale Conosco</a></li>
             </ul>
         </nav>
 
