--- a/pages/Quem-Somos.html
+++ b/pages/Quem-Somos.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" />
-        <title>Riot Club BR - Oficial</title>
+        <title>Riot Club BR - Quem Somos</title>
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/morkitus/bancoimg/main/Logos/favicon.ico">
         <link rel="stylesheet" type="text/css" href="../source/css/style.css" />
 
@@ -26,11 +26,11 @@
         <nav id="quem-somos">
             <ul id="navegacao">
                 <li class="home primeiro"><a class="horz" href="../index.html">Home</a></li>
-                <li class="quem-somos"><a class="horz" href="../pages/Quem-Somos.html">Quem Somos</a></li>
+                <li class="quem-somos"><a class="horz" href="../pages/quem-somos.html">Quem Somos</a></li>
                 <li class="streamers"><a class="horz" href="#">Streamers</a></li>
                 <li class="parceiros"><a class="horz" href="#">Parceiros</a></li>
                 <li class="galeria"><a class="horz" href="#">Galeria</a></li>
-                <li class="fale-conosco"><a class="horz" href="#">Fale Conosco</a></li>
+                <li class="fale-conosco"><a class="horz" href="../pages/fale-conosco.html">Fale Conosco</a></li>
             </ul>
         </nav>
 
@@ -91,7 +91,9 @@
 
         </div>
 
-        <div class="conteudo">
+        <div class="linha"></div>
+
+        <div class="conteudo" style="background-color: rgba(0, 0, 0, 0.75);">
 
             <hr>
             <p>Somos uma comunidade gamer que no meio de tantos altos e baixos nos estilos dos games, não largamos a paixão por automobilismo. Uma comunidade apaixonada e dedicada no que faz. Um comunidade que se divide entre o pessoal forfun que só arcade, jogos de corridas pra rir e trollar, ops. Uma rapaziada que leva a sério, se dedica horas e horas em simuladores buscando uma simulação perfeita, um tempo incrível e muita rivalidade na pista. Mas no fim, são todos Riot Club, que acabam entrando em qualquer game que tenha uma lata velha, com motor e quatro rodas para dar boas risadas.</p>
@@ -100,6 +102,8 @@
             <hr>
 
         </div>
+
+        <div class="linha"></div>
 
         <div class="caixa3 slider">
 
@@ -127,13 +131,17 @@
 
         </div>
 
-        <div class="conteudo">
+        <div class="linha"></div>
+
+        <div class="conteudo" style="background-color: rgba(0, 0, 0, 0.75);">
             <hr>
             <p>Se o cheiro de gasolina lhe parece sedutor, se o ronco do motor lhe faz arrepiar e se há altas doses de adrenalina correndo em suas veias a mais de 100 batimentos por minuto, pois é meu caro, nós temos muito em comum e há uma comunidade onde a paixão por carros é a regra mais importante, seja casual, ou no mais alto nível do simracing, todos são bem-vindos aqui na RiotClub.</p>
 
             <p>Independente do jogo e do estilo, se tem um carro, nós estaremos lá, mas deixamos claro que a zueira sempre terá o seu espaço, o companheirismo será nosso norte e o respeito o nosso guia por essa longa estrada dos games, nosso objetivo maior é simplesmente nos divertir na companhia dos nossos amigos, vagando de jogo em jogo, testando nosso rivais, trollando o amiguinho distraído e rindo da noobice alheia, pode vir você também e venha fazer parte da nossa família, e para não perder as novidades nos siga nas nossas redes sociais.</p>
             <hr>
         </div>
+
+        <div class="linha"></div>
 
         <div class="caixa4 slider">
 
@@ -161,7 +169,7 @@
 
         </div>
 
-        <footer>
+        <footer style="background-color: rgba(0, 0, 0, 0.75);">
             <div>
                 <hr>
                     Todos os direitos reservados © Wild HTML™ 2021 ®
