Atualização no Menu Horizontal

--- a/pages/Quem-Somos.html
+++ b/pages/Quem-Somos.html
@@ -25,10 +25,17 @@
 
         <nav id="quem-somos">
             <ul id="navegacao">
-                <li class="home primeiro"><a class="horz" href="../index.html">Home</a></li>
+                <li class="home primeiro"><a class="horz" href="../index.html">Início</a></li>
                 <li class="quem-somos"><a class="horz" href="../pages/quem-somos.html">Quem Somos</a></li>
                 <li class="streamers"><a class="horz" href="#">Streamers</a></li>
-                <li class="parceiros"><a class="horz" href="#">Parceiros</a></li>
+                <li class="parceiros">
+                    <a href="" class="dropbtn horz">Parceiros</a>
+                    <div class="dropdown-content">
+                        <a class="horz" href="#">Parceiro 1</a>
+                        <a class="horz" href="#">Parceiro 2</a>
+                        <a class="horz" href="#">Parceiro 3</a>
+                    </div>
+                </li>
                 <li class="galeria"><a class="horz" href="#">Galeria</a></li>
                 <li class="fale-conosco"><a class="horz" href="../pages/fale-conosco.html">Fale Conosco</a></li>
             </ul>
@@ -169,7 +176,7 @@
 
         </div>
 
-        <footer style="background-color: rgba(0, 0, 0, 0.75);">
+        <footer>
             <div>
                 <hr>
                     Todos os direitos reservados © Wild HTML™ 2021 ®
