--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
                 <li class="home primeiro"><a class="horz" href="./index.html">Início</a></li>
                 <li class="quem-somos"><a class="horz" href="./pages/quem-somos.html">Quem Somos</a></li>
                 <li class="streamers"><a class="horz" href="#">Streamers</a></li>
-                <li class="parceiros"><a class="horz" href="#">Parceiros</a></li>
+                <li class="parceiros">
+                    <a href="" class="dropbtn horz">Parceiros</a>
+                    <div class="dropdown-content">
+                        <a class="horz" href="#">Parceiro 1</a>
+                        <a class="horz" href="#">Parceiro 2</a>
+                        <a class="horz" href="#">Parceiro 3</a>
+                    </div>
+                </li>
                 <li class="galeria"><a class="horz" href="#">Galeria</a></li>
                 <li class="fale-conosco"><a class="horz" href="./pages/fale-conosco.html">Fale Conosco</a></li>
             </ul>
