Ajustes na Page Streamers

--- a/pages/fale-conosco.html
+++ b/pages/fale-conosco.html
@@ -27,7 +27,7 @@
             <ul id="navegacao">
                 <li class="home primeiro"><a class="horz" href="../index.html">Início</a></li>
                 <li class="quem-somos"><a class="horz" href="../pages/Quem-Somos.html">Quem Somos</a></li>
-                <li class="streamers"><a class="horz" href="#">Streamers</a></li>
+                <li class="streamers"><a class="horz" href="../pages/streamers.html">Streamers</a></li>
                 <li class="parceiros">
                   <a href="" class="dropbtn horz">Parceiros</a>
                   <div class="dropdown-content">
