--- a/pages/streamers.html
+++ b/pages/streamers.html
@@ -112,8 +112,8 @@
             <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
             <script type="text/javascript">
             new Twitch.Embed("twitch-embed", {
-                width: 854,
-                height: 480,
+                width: '100%',
+                height: 500,
                 channel: "RiotClubBR",
                 // Only needed if this page is going to be embedded on other websites
                 parent: ["embed.example.com", "othersite.example.com"]
