--- a/pages/Quem-Somos.html
+++ b/pages/Quem-Somos.html
@@ -36,7 +36,7 @@
                         <a class="horz" href="#">Parceiro 3</a>
                     </div>
                 </li>
-                <li class="galeria"><a class="horz" href="#">Galeria</a></li>
+                <li class="galeria"><a class="horz" href="../pages/galeria.html">Galeria</a></li>
                 <li class="fale-conosco"><a class="horz" href="../pages/fale-conosco.html">Fale Conosco</a></li>
             </ul>
         </nav>
