--- a/pages/streamers.html
+++ b/pages/streamers.html
@@ -36,7 +36,7 @@
                         <a class="horz" href="#">Parceiro 3</a>
                     </div>
                 </li>
-                <li class="galeria"><a class="horz" href="#">Galeria</a></li>
+                <li class="galeria"><a class="horz" href="../pages/galeria.html">Galeria</a></li>
                 <li class="fale-conosco"><a class="horz" href="../pages/fale-conosco.html">Fale Conosco</a></li>
             </ul>
         </nav>
@@ -112,7 +112,7 @@
             <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
             <script type="text/javascript">
             new Twitch.Embed("twitch-embed", {
-                width: 854,
+                width: '100%',
                 height: 480,
                 channel: "RiotClubBR",
                 // Only needed if this page is going to be embedded on other websites
