--- a/pages/fale-conosco.html
+++ b/pages/fale-conosco.html
@@ -155,7 +155,7 @@
                   </ul>
                 </div>
                 <div class='field required'>
-                  <label class='label'>Plataforma</label>
+                  <label class='label'>Platform</label>
                   <ul class='options'>
                     <li class='option'>
                       <input class='option-input' id='option-0' name='option' type='radio' value='0'>
